Minikube/frontend.yaml
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 80
  type: ClusterIP
---
# Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ahmedelbaz771/projetfrontend:1.1.0
        ports:
        - containerPort: 80
          name: http-port
        livenessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 3
          periodSeconds: 5
        startupProbe:
          exec:
            command:
            - touch
            - /tmp/healthy  # Créer le fichier /tmp/healthy lors de la sonde de démarrage
          failureThreshold: 30
          periodSeconds: 5
